[package]
name = "kvs"
version = "0.1.0"
edition = "2018"
description = "A key value server"
authors = ["Sampras Lopes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.2"
bson = "2.0.1"
clap = "2.33.3"
failure = "0.1.8"
predicates = "2.0.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.8.0"
structopt = "0.3.25"
tempfile = "3.2.0"
walkdir = "2.3.2"
